tests/negative/assign_mismatch.sp
// EXPECT: E3001
int main() {
    int x = "hello";
    return x;
}
